# denominate

./: Denominate.cabal  Denominate.hs  Denominate_Test.hs  Internal.hs  Main.hs  Makefile  README.md  README.txt  Setup.hs  TestMain.hs  TestRunner.hs  denominate.cabal  make-www.sh  quickcheck
Denominate/: Internal.hs
System/: Denominate.hs  Denominate_Test.hs
tests/: test.hs
www/: index.html  index.xhtml
