Name:            denominate
Version:         0.2
License:         BSD3
License-File:    LICENSE.txt
Author:          Calvin Smith
Maintainer:      cs-haskell@protempore.net
Category:        System
Stability:       Experimental
Build-Depends:   base, regex-base, regex-pcre
Synopsis:        Functions supporting bulk file and directory name 
                 normalization.
Description:     Denominate provides a main program for performing bulk 
                 file and directory renaming, using a built-in filename
                 converter or user-defined converters. Additionally, it 
                 consists of a module that exposes some useful functions
                 related to renaming and name normalization that might be 
                 otherwise useful.
Exposed-modules: Denominate
Ghc-Options:     -O2 -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures

Executable:      denominate
Main-Is:         Main.hs
