name:               denominate
version:            0.5.1
synopsis:           Functions supporting bulk file and directory name
                    normalization.
description:        Denominate is a simple program and an associated library
                    supporting bulk file and directory name normalization.
                    .
                    If you've ever spent a long time changing filenames to
                    get rid of whitespace or convert periods and underscores
                    to hyphens, you know why it exists.

license:            BSD3
license-file:       LICENSE.txt
category:           System
copyright:          (c) Calvin Smith
author:             Calvin Smith
maintainer:         cs-haskell@protempore.net
stability:          Experimental
homepage:           https://github.com/eukaryote/denominate
build-type:         Simple
cabal-version:      >= 1.2
tested-with:        GHC==6.8.2 GHC==6.10.1 GHC==7.6.3
extra-source-files: TestMain.hs Makefile
extra-tmp-files:    hugsin

library
  exposed-modules: System.Denominate
  build-depends:  base >= 3.0 && < 5.0, directory, filepath
  ghc-options:      -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-orphans

executable denominate
  main-is:          Main.hs
  build-depends:  base >= 3.0 && < 5.0, directory, filepath
  ghc-options:      -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-orphans

test-suite denominate_test
  type: exitcode-stdio-1.0
  main-is: TestMain.hs
  build-depends:  base >= 3.0 && < 5.0, directory, filepath, test-framework, test-framework-quickcheck2, test-framework-th, QuickCheck
