name:               denominate
version:            0.6.0
synopsis:           Functions supporting bulk file and directory name
                    normalization.
description:        Denominate is a simple program and an associated library
                    supporting bulk file and directory name normalization.
                    .
                    If you've ever spent a long time changing filenames to
                    get rid of whitespace or convert periods and underscores
                    to hyphens, you know why it exists.

license:            BSD3
license-file:       LICENSE.txt
category:           System
copyright:          (c) Calvin Smith
author:             Calvin Smith
maintainer:         cs-haskell@protempore.net
stability:          Experimental
homepage:           https://github.com/eukaryote/denominate
build-type:         Simple
cabal-version:      >= 1.8
tested-with:        GHC==7.6.3
extra-source-files: TestMain.hs Makefile

library
  exposed-modules: Denominate, Denominate.Internal
  build-depends:
    base >= 3.0 && < 5.0,
    directory,
    filepath
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-orphans

executable denominate
  main-is: Main.hs
  build-depends:
    base >= 3.0 && < 5.0,
    directory,
    filepath,
    denominate
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-orphans

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: test.hs
  build-depends:
    base >= 3.0 && < 5.0,
    directory,
    filepath,
    tasty,
    tasty-th,
    tasty-hunit,
    tasty-quickcheck,
    tasty-hspec,
    HUnit,
    QuickCheck,
    hspec,
    denominate
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-orphans
